# droxyd

./: .gitignore  .replit  Pipfile  README.md  app.py  login.py  pyproject.toml  sessionHandler.py  time.py
static/: index.css  index.js
static/assets/css/: index.css  login.css
static/assets/scripts/: index.js  login.js
templates/: index.html  login.html  main.html
templates/elements/: head.html
