[tool.poetry]
name = "repl_python3_droxyd-final"
version = "0.1.0"
description = ""
authors = ["StellarFX <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
flask-socketio = "^5.0.3"
markdown = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
